# reactos

base/applications/: CMakeLists.txt
base/applications/cmdutils/reg/: CMakeLists.txt  reg.exe.manifest  reg.rc
base/applications/drwtsn32/: drwtsn32.cpp  main.cpp  stacktrace.cpp
base/applications/sfc/: CMakeLists.txt  resource.h  sfc.c  sfc.rc
base/applications/sfc/lang/: en-US.rc
base/shell/explorer/: taskswnd.cpp
dll/apisets/: CMakeLists.txt
dll/appcompat/shims/layer/: CMakeLists.txt  versioninfolite.c
dll/directx/wine/devenum/: CMakeLists.txt
dll/directx/wine/quartz/: CMakeLists.txt
dll/ntdll/ldr/: ldrinit.c
dll/ntdll/rtl/: libsupp.c
dll/shellext/shellbtrfs/: CMakeLists.txt
dll/shellext/zipfldr/: CMakeLists.txt  CSendTo.hpp  CZipCreator.cpp  CZipCreator.hpp  precomp.h  zipfldr.cpp
dll/shellext/zipfldr/res/: zipfldr.rgs
dll/win32/: CMakeLists.txt
dll/win32/advapi32/: CMakeLists.txt  advapi32.spec
dll/win32/advapi32/nt_600/: RegDeleteTree.c  RegLoadMUIString.c  RegSetKeyValue.c
dll/win32/advapi32/reg/: reg.c
dll/win32/atl/: CMakeLists.txt
dll/win32/atl100/: CMakeLists.txt
dll/win32/atl80/: CMakeLists.txt
dll/win32/bcrypt/: CMakeLists.txt  bcrypt_internal.h  bcrypt_main.c  mbedtls.c
dll/win32/crypt32/: CMakeLists.txt
dll/win32/msctf/: CMakeLists.txt
dll/win32/msi/: CMakeLists.txt
dll/win32/rpcrt4/: CMakeLists.txt
dll/win32/sfc/: CMakeLists.txt  precomp.h  sfc.c  sfc.spec
dll/win32/sfc_os/: CMakeLists.txt  sfc_os.c  sfc_os.spec
dll/win32/sfcfiles/: CMakeLists.txt  sfcfiles.c  sfcfiles.spec
dll/win32/shell32/: shell32.spec  shlfileop.cpp
dll/win32/shell32/dialogs/: dialogs.cpp  drive.cpp
dll/win32/shell32/folders/: CRecycleBin.cpp
dll/win32/shell32/wine/: shellord.c
dll/win32/windowscodecs/: CMakeLists.txt
dll/win32/wshom.ocx/: CMakeLists.txt
drivers/network/dd/e1000/: e1000hw.h  hardware.c  info.c  interrupt.c  ndis.c  nic.h
drivers/network/ndis/ndis/: main.c  miniport.c  protocol.c
media/sdb/: sysmain.xml
modules/rostests/apitests/comctl32/: CMakeLists.txt  button.c  comctl32_apitest.rc  comctl32v6.manifest  imagelist.c  testlist.c
modules/rostests/apitests/sfc/: CMakeLists.txt
modules/rostests/winetests/bcrypt/: CMakeLists.txt  bcrypt.c  testlist.c
modules/rostests/winetests/wintrust/: softpub.c
sdk/cmake/: CMakeMacros.cmake  gcc.cmake  msvc.cmake
sdk/include/ndk/: sfc.h
sdk/include/psdk/: bcrypt.h  ntstatus.h  sfc.h
sdk/include/reactos/: undocshell.h
sdk/lib/drivers/lwip/src/include/: lwipopts.h
sdk/lib/rtl/: actctx.c  debug.c
sdk/tools/: gen_baseaddress.py
win32ss/user/user32/windows/: defwnd.c
